--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,8 +1,26 @@
 html,
 body,
 #root {
-  width: 100%;
-  height: 100%;
+  width: 100dvw;
+  height: 100dvh;
   margin: 0;
   padding: 0;
+  background-color: black;
+  color: white;
+}
+
+main {
+  display: grid;
+  height: 100dvh;
+  place-items: center;
+}
+
+.loading {
+  position: absolute;
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.513);
+  width: 100dvw;
+  height: 100dvh;
+  display: grid;
+  place-items: center;
 }
